fix(ui): created gaps for the register and login forms for error message space
Also installed react-router for routing between the various application pages.

--- a/client/src/components/RegisterForm/RegisterForm.module.css
+++ b/client/src/components/RegisterForm/RegisterForm.module.css
@@ -44,12 +44,7 @@
     color: white;
 }
 
-.loginButton { 
+.registerButton { 
     width: 100%;
     margin-top: 2rem;
-}
-
-.checkboxAndLink { 
-    display: flex;
-    gap: 9rem;
 }
